Fixes z-index of color button because it was clickable when the sidebar was opened

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -29,7 +29,7 @@
 #menu-button,
 #color-mode-button {
   position: fixed;
-  z-index: 999999;
+  z-index: 999;
 }
 
 #menu-button,
